--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
   - docker run -e CI=true klyners/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-north-1"
+  app: "frontend"
+  env: "Frontend-env"
+  bucket-name: "elasticbeanstalk-eu-north-1-593793046006"
+  bucket-path: "frontend"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY$
+  secret_access_key: "$AWS_SECRET_KEY$"
