--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ deploy:
   bucket-name: "elasticbeanstalk-eu-north-1-593793046006"
   bucket-path: "frontend"
   on:
-    branch: master
+    branch: main
   access_key_id: $AWS_ACCESS_KEY$
   secret_access_key: "$AWS_SECRET_KEY$"
