--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t klyners/docker-react -f Dockerfile .
+  - docker build -t klyners/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true klyners/docker-react npm run test
+  - docker run -e CI=true klyners/docker-react npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
